--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 
 :root {
     --primary-color: #991b1b;
+    --dark-grey: #555555;
+    --light-grey: #cecece;
 }
 
 body {
-    font-family: "Courier Prime", monospace;
+    font-family: "DM Sans", sans-serif;
     color: rgb(13, 13, 13);
 }
 
@@ -86,4 +88,36 @@ hr {
 
 .navigation .link-active {
     font-weight: bold;
+}
+
+/* header */
+
+.hero {
+    padding: 2rem;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
+    color: var(--dark-grey);
+    padding: 1rem;
+    text-align: center;
+}
+
+/* Sections */
+
+.section h1{
+    text-align: center;
+}
+
+.section {
+    padding: 2rem;
+}
+
+.ow {
+    background-color: var(--light-grey);
 }
